# ai-agent

./: README.md  docker-compose.yml
ai-service-agent/: Dockerfile  pyproject.toml
ai-service-agent/src/: main.py
ai-service-agent/src/agents/: AssistentAgent.py  ClientAgent.py
ai-service-agent/src/config/: .env-sample  Settings.py
ai-service-agent/src/core/: Conversation.py
ai-service-agent/src/routes/: ServiceRoute.py
ai-service-agent/src/test/: occurrence_event_alarm.json
