[tool.poetry]
name = "Ai Service Agent"
version = "0.1"
description = "This project simulates an iteration between 2 agents AI dealing with a security multi-round conversation"
authors = ["Luiz Carlos <luizcarlosdk@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.115.2"

[tool.ruff]
line-length = 79